# nexus

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  non_standard.rs
common/: Cargo.toml
common/src/: lib.rs  non_standard.rs
did-integrity/: Cargo.toml
did-integrity/src/: asymmetric.rs  did.rs  lib.rs
did-integrity/src/did/: key.rs  mod.rs
examples/client-messaging-example/: Cargo.toml
examples/client-messaging-example/src/: main.rs
protocols/client-direct-message-sdk/: Cargo.toml
protocols/client-direct-message-sdk/src/: lib.rs
protocols/direct-message/: Cargo.toml
protocols/direct-message/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  vanilla.rs
