[workspace]
resolver = "2"
members = [
	"client",
	"server",
]

# These settings will apply to all members of the workspace that opt in to them
[workspace.package]
version = "0.0.0"
license = "MIT OR BSD-2-Clause-Patent"
repository = "https://github.com/NexusSocial/nexus"
edition = "2021"
rust-version = "1.71.1"
