[package]
name = "server"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.6.20"
tokio = {version = "1.29.1", features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
serde = { workspace = true }
common = { workspace = true }
direct-message = { workspace = true }
