[package]
name = "client-messaging-example"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.29.1", features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
serde = { workspace = true }
common = { workspace = true }
client-direct-message-sdk = { workspace = true }
direct-message = { workspace = true }
egui = "0.22.0"
eframe = "0.22.0"