[package]
name = "client-direct-message-sdk"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
serde = { workspace = true }
common = { workspace = true }
client = { workspace = true }
direct-message = { workspace = true }
anyhow = { workspace = true }
